# s2-ws-json-python

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.rst  setup.cfg  setup.py
.github/workflows/: ci.yml
ci/: lint.sh
docs/: conf.py  index.rst  requirements.txt
docs/_templates/: custom-module-template.rst
src/s2wsjson/: s2_validation_error.py  validate_values_mixin.py
src/s2wsjson/common/: number_range.py  timer.py
src/s2wsjson/tools/: cli.py
tests/unit/common/: timer_test.py
